# uvc

./: .travis.yml  CMakeLists.txt  CmdLineArgs.cpp  CmdLineArgs.hpp  Hash.hpp  LICENSE.txt  Makefile  MolecularID.cpp  MolecularID.hpp  README.md  README.txt  addmath.c  bcf_formats.step1.hpp  bcf_formats_generator1.cpp  callTN.c  callTN.py  common.cpp  common.h  common.hpp  consensus.hpp  conversion.hpp  debarcode_main.c  gitdiff.txt  grouping.cpp  grouping.hpp  htslib_example_usage.c  install-dependencies.sh  instcode.hpp  integrate_haplotype_variation.cpp  iohts.cpp  iohts.hpp  logging.cpp  logging.hpp  main.cpp  main.hpp  main_consensus.hpp  main_conversion.hpp  minivc.c  utils.hpp  uvcActiveRegion.cpp  (+4 more)
.github/workflows/: makefile.yml
eval/datafiles/: hd734.b37.vcf  hd734.hg19.vcf
eval/mageri/: eval-SRP064450.sh
eval/scripts/: evaluate-hd734-vs-healthy.py
eval/smcounter2/: eval-SRP153933.sh
scripts/: extract-barcodes.py
